golden/error/parse_bang.test
!true

# output:
 --> stdin:1:0
  |
1 | !true
  | ^
Error: Invalid operator. Negation is written with keyword 'not' instead of '!'.
